--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -17,3 +17,31 @@
         color: #777575;
     }
 }
+@mixin custom-btn-book1($color, $color-lighten) {
+    color: #fff;
+    background-color: $color;
+    border-color: $color;
+    &:hover,
+    &:focus,
+    &:active,
+    &:active:focus,
+    &:active:hover {
+        color: #000;
+        border-color: $color-lighten;
+        background-color: $color-lighten;
+    }
+}
+@mixin custom-btn-book2($color, $color-lighten) {
+    color: #fff;
+    background-color: $color;
+    border-color: $color;
+    &:hover,
+    &:focus,
+    &:active,
+    &:active:focus,
+    &:active:hover {
+        color: #000;
+        border-color: $color-lighten;
+        background-color: $color-lighten;
+    }
+}
