--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,3 +2,7 @@ $color-book-title: #555555;
 $color-header-text: #bbb9b9;
 $color-icon: #47090999;
 $color-footer-icon: lighten($color-icon, 10%);
+$custom-btn-book1-color: #914225;
+$custom-btn-book1-color-hover: rgba(140, 60, 31, 0.7);
+$custom-btn-book2-color: #2da3e2;
+$custom-btn-book2-color-hover: lighten($custom-btn-book2-color, 20%);
