--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,11 +1,29 @@
 @import "./_variables";
 @import "./mixins";
+
 section.books {
     .title {
         &:after {
             position: absolute;
             content: "";
             width: 150px;
+            height: 2px;
+            background-color: $color-book-title;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        h3 {
+            font-size: 36px;
+            color: $color-book-title;
+            line-height: 120px;
+            margin: 0px;
+        }
+    }
+    .title2 {
+        &:after {
+            position: absolute;
+            content: "";
+            width: 300px;
             height: 2px;
             background-color: $color-book-title;
             left: 50%;
@@ -35,9 +53,27 @@ section.books {
             margin: 0px;
         }
     }
-    
 }
-
+section.Purchase_cart {
+    .title2 {
+        &:after {
+            position: absolute;
+            content: "";
+            width: 400px;
+            height: 2px;
+            background-color: $color-book-title;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        h3 {
+            border-top: 1px solid #777;
+            font-size: 36px;
+            color: $color-book-title;
+            line-height: 120px;
+            margin: 0px;
+        }
+    }
+}
 header {
     .header-text {
         h3 {
@@ -60,4 +96,36 @@ footer ul li {
     a {
         @include color-icon($color-icon, $color-footer-icon);
     }
+}
+footer.book2 ul li {
+    a {
+        @include color-icon($custom-btn-book2-color, $custom-btn-book2-color-hover);
+    }
+}
+a.btn-icon-book1 {
+    padding: 5px 10px 4px;
+    color: #fff;
+    border: 1px solid #914225;
+    background-color: #914225;
+    border-radius: 2px;
+    margin-left: 50px;
+    font-size: 20px;
+    margin-bottom: 65px;
+}
+a.btn-icon-book2 {
+    padding: 5px 10px 4px;
+    color: #fff;
+    border: 1px solid #2da3e2;
+    background-color: #2da3e2;
+    border-radius: 2px;
+    margin-left: 50px;
+    font-size: 20px;
+    margin-bottom: 65px;
+}
+
+.custom-btn-book1 {
+    @include custom-btn-book1($custom-btn-book1-color, $custom-btn-book1-color-hover);
+}
+.custom-btn-book2 {
+    @include custom-btn-book2($custom-btn-book2-color, $custom-btn-book2-color-hover);
 }
