--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -8,19 +8,21 @@
     text-align: center;
     color: #bbb9b9;
     display: block;
+    transition: all .5s ease;
     &:hover,
     &:active,
     &:focus,
     &:active:hover,
     &:active:focus {
         background-color: $color-lighten;
-        color: #777575;
+        color: #000;
     }
 }
 @mixin custom-btn-book($color, $color-lighten) {
     color: #fff;
     background-color: $color;
     border-color: $color;
+    transition: all .5s ease;
     &:hover,
     &:focus,
     &:active,
@@ -30,5 +32,14 @@
         border-color: $color-lighten;
         background-color: $color-lighten;
     }
+}
+@mixin btn-header-icon-book($color) {
+    padding: 5px 10px 4px;
+    color: #fff;
+    border: 1px solid $color;
+    background-color: $color;
+    border-radius: 2px;
+    margin-left: 50px !important;
+    font-size: 20px;
 }
 
