--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,7 +17,6 @@ section.books {
             color: $color-book-title;
             line-height: 120px;
             margin: 0px;
-            
         }
     }
     .title2 {
@@ -35,7 +34,6 @@ section.books {
             color: $color-book-title;
             line-height: 120px;
             margin: 0px;
-            
         }
     }
     .title1 {
@@ -53,7 +51,6 @@ section.books {
             color: $color-book-title;
             line-height: 120px;
             margin: 0px;
-         
         }
     }
 }
@@ -93,37 +90,121 @@ header {
             padding: 30px 25% 60px;
         }
     }
+    a {
+        &.btn-icon-book1 {
+            @include btn-header-icon-book($custom-btn-book1-color);
+        }
+
+        &.btn-icon-book2 {
+            @include btn-header-icon-book($custom-btn-book2-color);
+        }
+        &.btn-icon-book3 {
+            @include btn-header-icon-book($custom-btn-book3-color);
+        }
+    }
 }
 
-footer ul li {
-    a {
-        @include color-icon($color-icon, $color-footer-icon);
+footer {
+    ul {
+        li {
+            a {
+                @include color-icon($color-icon, $color-footer-icon);
+            }
+        }
+    }
+    &.book2 {
+        ul {
+            li {
+                a {
+                    @include color-icon($custom-btn-book2-color, $custom-btn-book2-color-hover);
+                }
+            }
+        }
+    }
+    &.book3 {
+        ul {
+            li {
+                a {
+                    @include color-icon($custom-btn-book3-color, $custom-btn-book3-color-hover);
+                }
+            }
+        }
     }
 }
-footer.book2 ul li {
-    a {
-        @include color-icon($custom-btn-book2-color, $custom-btn-book2-color-hover);
+header {
+    &.header {
+        .overlay {
+            background-color: #47090999;
+        }
+        .overlay1 {
+            background-color: rgba(140, 60, 31, 0.8);
+        }
+        .overlay3 {
+            background-color: rgba(44, 81, 102, 0.6);
+        }
+        .overlay2 {
+            background-color: rgba(45, 163, 226, 0.2);
+        }
     }
 }
-a.btn-icon-book1 {
-    padding: 5px 10px 4px;
-    color: #fff;
-    border: 1px solid #914225;
-    background-color: #914225;
-    border-radius: 2px;
-    margin-left: 50px;
-    font-size: 20px;
-   
-}
-a.btn-icon-book2 {
-    padding: 5px 10px 4px;
-    color: #fff;
-    border: 1px solid #2da3e2;
-    background-color: #2da3e2;
-    border-radius: 2px;
-    margin-left: 50px;
-    font-size: 20px;
-    
+ol {
+    &.custom-breadcrumb-book1 {
+        padding: 25px 0;
+        background-color: transparent;
+        a {
+            color: $custom-btn-book1-color;
+            text-decoration: none;
+            &:hover {
+                color: lighten($custom-btn-book1-color, 40%);
+            }
+        }
+        .active {
+            color: #bfbfbf;
+        }
+        & > li + li::before {
+            content: ">";
+            color: $custom-btn-book1-color;
+            padding: 0 5px;
+        }
+    }
+    &.custom-breadcrumb-book2 {
+        padding: 25px 0;
+        background-color: transparent;
+        a {
+            color: $custom-btn-book2-color;
+            text-decoration: none;
+            &:hover {
+                color: lighten($custom-btn-book2-color, 20%);
+            }
+        }
+        .active {
+            color: #bfbfbf;
+        }
+        & > li + li::before {
+            content: ">";
+            color: $custom-btn-book2-color;
+            padding: 0 5px;
+        }
+    }
+    &.custom-breadcrumb-book3 {
+        padding: 25px 0;
+        background-color: transparent;
+        a {
+            color: $custom-btn-book3-color;
+            text-decoration: none;
+            &:hover {
+                color: lighten($custom-btn-book3-color, 30%);
+            }
+        }
+        .active {
+            color: #bfbfbf;
+        }
+        & > li + li::before {
+            content: ">";
+            color: $custom-btn-book3-color;
+            padding: 0 5px;
+        }
+    }
 }
 
 .custom-btn-book1 {
@@ -131,4 +212,7 @@ a.btn-icon-book2 {
 }
 .custom-btn-book2 {
     @include custom-btn-book($custom-btn-book2-color, $custom-btn-book2-color-hover);
+}
+.custom-btn-book3 {
+    @include custom-btn-book($custom-btn-book3-color, $custom-btn-book3-color-hover);
 }
